<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.com.andrzejgrzyb.inventoryapp.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/name_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label" />

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/price_edit" />

        <TextView
            android:id="@+id/price_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_label" />

        <EditText
            android:id="@+id/price_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6" />

        <TextView
            android:id="@+id/quantity_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <Button
                android:id="@+id/decrease_quantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/quantity_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4" />

            <Button
                android:id="@+id/increase_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/plus"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/supplier_name_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name_label" />

        <EditText
            android:id="@+id/supplier_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/supplier_phone_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone_label" />

        <EditText
            android:id="@+id/supplier_phone_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

        <TextView
            android:id="@+id/supplier_email_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_email_label" />

        <EditText
            android:id="@+id/supplier_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/image_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image" />

        <Button
            android:id="@+id/select_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </LinearLayout>

</ScrollView>